--- a/index.html
+++ b/index.html
@@ -33,5 +33,16 @@
         </form>
       </main>
     </div>
+
+    <div class="modal-wrapper open">
+      <div class="modal card">
+        <h2 class="title">
+          Seu IMC é de 28
+          <button class="close">
+            <img src="./assets/close.svg" alt="imagem para fechar o popup" />
+          </button>
+        </h2>
+      </div>
+    </div>
   </body>
 </html>
